# rsomics-sc-regress-out

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs  make_golden.py  scanpy_regress_oracle.py
tests/golden/: covariates.tsv  regress_out.mtx
